# ai-on-the-web

./: README.md  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src/app/: app.type.tsx
src/components/: Llama2.tsx  Main.tsx  workerContext.tsx
src/wasm/llama2/: Cargo.toml  README.md  build.sh
src/wasm/llama2/pkg/: llama2.d.ts  llama2.js  llama2_bg.wasm  llama2_bg.wasm.d.ts
src/wasm/llama2/src/: lib.rs  llama2.rs
src/workers/: llama2.worker.ts
